src/styles/style.css
@import url("meyer-reset.css");

@font-face {
  font-family: 'Montserrat';
  src: url('../fonts/Montserrat/static/Montserrat-Regular.ttf') format('truetype');
}

html {
  box-sizing: border-box;
  font-size: 16px;
  font-family: 'Montserrat', sans-serif;

  --default-border-radius: 0.3rem;
  --green: #5F6F52;
  --sage: #A9B388;
  --beige: #FEFAE0;
  --brown: #B99470;
  --li-color: rgb(250, 250, 250);
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  height: 100vh;
  width: 100vw;
}

#body-wrapper {
  height: 100%;
  width: 100%;

  display: grid;
  grid-template-columns: minmax(20%, max-content) 1fr;
  grid-template-rows: min-content 1fr min-content;
  padding: 2px;
  background-color: black;

  /* hide chrome scrollbar appearing at 100vh */
  overflow: hidden;
}

header {
  grid-column: 1 / 3;
  grid-row: 1 / 2;
  background-color: var(--green);
  border-bottom: 2px solid;
}

#sidebar {
  grid-column: 1 / 2;
  grid-row: 2 / 3;
  background-color: var(--brown);
  border-right: 2px solid;

  /* prevent grid item expanding when overflowing */
  min-height: 0;

  /* allows #sidebar-list-container to scroll */
  display: flex;
  flex-direction: column;
}

#sidebar-divider {
  background-color: var(--green);
  height: 0.1rem;
  width: 95%;
  margin: 0 auto;
}

#sidebar-list-container {
  overflow-y: scroll;
}

#main-content {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  padding: 0.5rem;
  background-color: var(--beige);

  overflow-y: scroll;
}

/* Hide scrollbar (Chrome, Safari, Opera) */
#main-content::-webkit-scrollbar, #sidebar-list-container::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar IE, Edge, Firefox */
#main-content, #sidebar-list-container {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

#todo-list {
  display: grid;
  grid-template-columns: repeat(2, minmax(min-content, 10%)) 1fr minmax(min-content, 10%) repeat(2, min-content);
  align-items: center;
  gap: 0.5rem;

  max-width: 75rem;
  margin: 0 auto;
}

/*
  LIST ITEMS
*/

.todo-li {
  grid-column: 1 / 7;

  /* inherit parent grid so .todo-li cousins align */
  display: grid;
  grid-template-columns: subgrid;
  align-items: inherit;

  border: 1px solid black;
  border-left: 3px solid black;
  border-radius: var(--default-border-radius);

  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  background-color: var(--li-color);

  padding: 0.5rem;
}

.li-inactive {
  border-color: grey;
  background-color: lightgrey;
}

.li-inactive > div {
  color: grey;
  background-color: lightgrey;
}

.todo-li > div:first-of-type {
  padding-left: 0;
}

.project-wrapper {
  display: flex;
  align-items: center;
  gap: 0.5rem;
  margin: 0 0.5rem;
}

/*
  FOOTER
*/

footer {
  grid-column: 1 / 3;
  grid-row: 3 / 4;

  display: flex;
  justify-content: center;
  align-items: center;
  gap: 1.5rem;

  background-color: var(--green);
  border-top: 2px solid;
  padding: 0.25rem 0;
}

#footer-divider {
  border: 1px solid grey;
  height: 75%;
}

footer > div {
  font-size: 1.5rem;
  color: var(--beige);
  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
}

#github-repo-link {
  text-decoration: none;
}

#github-repo-link:hover {
  text-decoration: underline;
}

/*
  MODAL
*/

#modal-bg {
  position: fixed;
  top: 0;

  width: 100%;
  height: 100%;

  background-color: rgba(0, 0, 0, 0.7);
}

.modal-wrapper {
  position: fixed;
  top: 0;
  width: 100%;
  height: 100%;
  background: none;

  display: flex;
  align-items: center;
  justify-content: center;
}

.modal {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  width: 25rem;

  background-color: white;

  border-radius: var(--default-border-radius);
  padding: 0.5rem;

  box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
}

.modal > legend {
  float: left; /* positions legend INSIDE of fieldset */
  font-size: 2rem;
}

.hidden {
  display: none !important;
}

/*
  HEADINGS
*/

h1 {
  font-size: 5rem;
  margin: 0.5rem auto;
  text-align: center;
  text-shadow: .2rem .2rem 0 var(--beige);
}

h2 {
  font-size: 2.5rem;
  margin: 0.5rem 2rem;
  text-shadow: .1rem .1rem 0 var(--beige);
}

h3 {
  font-size: 1.5rem;
  padding: 0.25rem;
  border: 2px solid rgba(0, 0, 0, 0);
  border-radius: 5px;
  cursor: pointer;
  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
  width: 100%;
}

h3:hover {
  background-color: var(--sage);
}

h3:active {
  background-color: black;
  color: white;
}

.current-list {
  background-color: var(--beige);
}

/*
  BUTTONS
*/

button {
  background: none;
  border-radius: var(--default-border-radius);
  border: 1px solid;
}

button:hover {
  cursor: pointer;
  color: white;
}

button:active{
  border-color: black;
}

.add-btn {
  padding: 0.25rem 1rem;
  margin: 0.5rem 1.5rem;
  font-size: 1rem;
  color: darkblue;
}

.add-btn:hover {
  background-color: darkblue;
}

.green-btn {
  color: darkgreen;
  border-radius: 10rem;
}

.green-btn:hover {
  background-color: darkgreen;
}

.red-btn {
  color: red;
  border-radius: 10rem;
}

.red-btn:hover {
  background-color: red;
}

.list-delete-btn {
  border: none;
  font-size: 1rem;
  color: black;
}

